<resources>
    <string name="app_name">Visitor Application</string>
    <string name="tab_text_1">Carrier SignIn</string>
    <string name="tab_text_2">Visitor</string>
    <string name="submit">Submit</string>
    <string name="speed_loss_reason">speed_loss_reason</string>
    <string name="enter_speed_time_in_mins">enter_speed_time</string>
    <string name="issue_type">issue_type</string>
    <string name="select_department">select_department</string>
    <string name="select_application">select_application</string>
    <string name="search_application">search_application</string>
    <string name="team_leader">team leader</string>
    <string name="issue_name">issue name</string>
    <string name="search_issue">search issue</string>
    <string name="brand_variant">brand variant</string>
    <string name="mrp">mrp</string>
    <string name="alcohol">alcohol</string>
    <string name="edp_range">edp range</string>
    <string name="mid">mid</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="carrier_signin">Carrier SignIn</string>
    <string name="schedule">----- Schedule -----</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="today_02_20">Today, 02:20 PM</string>
    <string name="actual">----- Actual -----</string>
    <string name="date">Date</string>
    <string name="_13_01_2020">13-01-2020</string>
    <string name="time_in">Time In</string>
    <string name="_12_10_pm">12:10 PM</string>
    <string name="time_out">Time Out</string>
    <string name="_03_40_pm">03:40 PM</string>
    <string name="customer_details">----- Customer Details -----</string>
    <string name="driver_details">----- Driver Details -----</string>
    <string name="carrier_name">Carrier Name</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="license_number">License Number</string>
    <string name="vehicle_details">----- Vehicle Details -----</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="driver_signature">Driver Signature</string>
    <string name="security_sign">Security Sign.</string>
    <string name="auth_sign">Auth. Sign.</string>
    <string name="visitor_name">Visitor Name</string>
    <string name="visitor_register">Visitor Register</string>
    <string name="representing">Representing</string>
    <string name="card_number">Card Number</string>
    <string name="name_of_the_host">Name of the Host</string>
    <string name="purpose_of_visit">Purpose of Visit</string>
    <string name="personal_belongings">Personal Belongings</string>
    <string name="identity_proof">----- Identity Proof -----</string>
    <string name="aadhar_card_number">Aadhar Card Number</string>
    <string name="visitor_card_number">Visitor Card Number</string>
    <string name="driving_lic_number">Driving Lic. Number</string>
    <string name="signature">----- Signature -----</string>
    <string name="visitor">Visitor</string>
    <string name="security">Security</string>
    <string name="remarks">Remarks</string>
    <string name="_2019">2019</string>
    <string name="_2020">2020</string>
    <string name="_122334">12233</string>
    <string name="_120">120</string>
    <string name="everyday_sale_of_bottles_in_a_minute">Everyday sale of bottles in a minute</string>
    <string name="_2021">2021</string>
    <string name="time">Time</string>
    <string name="date_timein"><![CDATA[Date & TimeIn]]></string>
    <string name="date_timeout"><![CDATA[Date & TimeOut]]></string>
    <string name="add">Add</string>
    <string name="customer_name">Customer Name</string>
</resources>
