<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back_rect">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_2019"
            android:textColor="#000"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_20sdp"
            android:background="@drawable/back_rect"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_2020"
                android:layout_weight="1"
                android:textColor="#000"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_20sdp"
                android:background="@drawable/back_rect"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20sdp"
                android:layout_weight="1"
                android:textColor="#000"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="@dimen/_10sdp"
                android:text="@string/_2021"
                android:background="@drawable/back_rect"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#BD2525"
                android:text="@string/_122334"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/back_rect"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#BD2525"
                android:text="@string/_122334"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/back_rect"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_122334"
                android:gravity="center"
                android:textColor="#BD2525"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/back_rect"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:background="@drawable/back_rect"
                android:text="@string/_120"
                android:gravity="center"
                android:textColor="#BD2525"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:background="@drawable/back_rect"
                android:text="@string/everyday_sale_of_bottles_in_a_minute"
                android:gravity="center"
                android:textColor="#000"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>